# simple_pool

platform/Linux/: CMakeLists.txt  main.cpp
platform/PSP/: CMakeLists.txt  main.cpp
src/: font.cpp  mainwindow.cpp  music.cpp  rect.cpp  texture.cpp
